# MathGame

./: README.md  io.github.diego_ivan.mathgame.json  meson.build
data/: io.github.diego_ivan.mathgame.desktop.in  io.github.diego_ivan.mathgame.gschema.xml  io.github.diego_ivan.mathgame.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES
src/: Exercise.vala  ExerciseGenerator.vala  ExerciseRow.vala  Game.vala  Operation.vala  application.vala  main.vala  mathgame.gresource.xml  meson.build  style.css  window.blp  window.ui  window.vala
src/Services/: Settings.vala  Timer.vala
src/Views/: GameView.vala  StartView.vala
src/gtk/: exercise-row.blp  game-view.blp  start-view.blp
